--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo" href="/"></a>
-      <img src="./images/icons/header-logo.png" alt="logo" />
       <nav>
+        <a class="logo" href="./images/icons/header-logo.png">Webstudio</a>
+
         <ul class="page-nav">
           <li>
             <a class="link" href="second-page.html" target="_blank">Studio</a>
@@ -29,8 +29,14 @@
         </ul>
       </nav>
       <address>
-        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="tel" href="tel:+0110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a class="contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="contact" href="tel:+0110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
@@ -39,26 +45,36 @@
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
-        <h3 class="title">Strategy</h3>
-        <p class="text">
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h3 class="title">Punctuality</h3>
-        <p class="text">
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h3 class="title">Diligence</h3>
-        <p class="text">
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h3 class="title">Technologies</h3>
-        <p class="text">
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+        <ul>
+          <li>
+            <h2 class="title">Strategy</h2>
+            <p class="text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2 class="title">Punctuality</h2>
+            <p class="text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2 class="title">Diligence</h2>
+            <p class="text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2 class="title">Technologies</h2>
+            <p class="text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2 class="section-title">What are we doing</h2>
@@ -136,8 +152,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="footer-logo" href="/"></a>
-      <img src="./images/icons/footer-logo.png" alt="logo" />
+      <a class="footer-logo" href="./images/icons/footer-logo.png">Webstudio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
