--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="page-header">
       <nav>
-        <a class="logo" href="./images/icons/header-logo.png">Webstudio</a>
+        <a class="logo" href="./index.html">Webstudio</a>
 
         <ul class="page-nav">
           <li>
@@ -47,28 +47,29 @@
       <section>
         <ul>
           <li>
-            <h2 class="title">Strategy</h2>
+            <h2 hidden>Advantages</h2>
+            <h3 class="title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2 class="title">Punctuality</h2>
+            <h3 class="title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2 class="title">Diligence</h2>
+            <h3 class="title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2 class="title">Technologies</h2>
+            <h3 class="title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -110,7 +111,7 @@
         <ul class="team-images">
           <li>
             <img
-              src="./images/team/img.jpg"
+              src="./images/team/img1.jpg"
               alt="Product-Designer"
               width="260"
               height="260"
@@ -152,7 +153,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="footer-logo" href="./images/icons/footer-logo.png">Webstudio</a>
+      <a class="footer-logo" href="./index.html">Webstudio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
